--- a/assets/scss/core/core.scss
+++ b/assets/scss/core/core.scss
@@ -27,7 +27,7 @@
 @import 'animation/animation';
 
 //perfect-scrollbar
-@import 'perfect-scrollbar/perfect-scrollbar';
+//@import 'perfect-scrollbar/perfect-scrollbar';
 
 
 //extra
