--- a/assets/scss/core/sidebar/sidebar.scss
+++ b/assets/scss/core/sidebar/sidebar.scss
@@ -12,7 +12,7 @@ Main sidebar
     position: absolute;
     width: $sidebar-width-full;
     height: 100%;
-    top: 0px;
+    top: 0;
     z-index: 10;
     padding-top: 64px;
     background: $sidebar;
@@ -27,6 +27,9 @@ sidebar navigation
 .scroll-sidebar {
     height: calc(100% - 20px);
     position: relative;
+    overflow: hidden;
+    overflow-y: auto;
+    @extend %scroll-style;
 }
 
 .sidebar-nav {
