--- a/assets/css/core/topbar/header.css
+++ b/assets/css/core/topbar/header.css
@@ -3,17 +3,17 @@ Error: Undefined variable: "$danger".
         on line 16 of scss/core/topbar/notify.scss
         from line 2 of scss/core/topbar/header.scss
 
-11:     transition: $transitions;
-12:     box-shadow: 1px 0px 7px rgba(0, 0, 0, 0.05);
-13:     background: $topbar;
-14:     height: $topbar-height;
-15:     .navbar-collapse {
-16:         padding: 0px 10px 0 0;
-17:     }
-18:     .top-navbar {
-19:         min-height: $topbar-height;
-20:         padding: 0px;
-21:         .dropdown-toggle::after {
+11:   transition: $transitions;
+12:   box-shadow: 1px 0px 7px rgba(0, 0, 0, 0.05);
+13:   background: $topbar;
+14:   height: $topbar-height;
+15: 
+16:   .navbar-collapse {
+17:     padding: 0px 10px 0 0;
+18:   }
+19: 
+20:   .top-navbar {
+21:     min-height: $topbar-height;
 
 Backtrace:
 scss/core/topbar/notify.scss:16
@@ -99,4 +99,4 @@ C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/interna
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$danger\".\A         on line 16 of scss/core/topbar/notify.scss\A         from line 2 of scss/core/topbar/header.scss\A \A 11:     transition: $transitions;\A 12:     box-shadow: 1px 0px 7px rgba(0, 0, 0, 0.05);\A 13:     background: $topbar;\A 14:     height: $topbar-height;\A 15:     .navbar-collapse {\A 16:         padding: 0px 10px 0 0;\A 17:     }\A 18:     .top-navbar {\A 19:         min-height: $topbar-height;\A 20:         padding: 0px;\A 21:         .dropdown-toggle::after {"; }
+  content: "Error: Undefined variable: \"$danger\".\A         on line 16 of scss/core/topbar/notify.scss\A         from line 2 of scss/core/topbar/header.scss\A \A 11:   transition: $transitions;\A 12:   box-shadow: 1px 0px 7px rgba(0, 0, 0, 0.05);\A 13:   background: $topbar;\A 14:   height: $topbar-height;\A 15: \A 16:   .navbar-collapse {\A 17:     padding: 0px 10px 0 0;\A 18:   }\A 19: \A 20:   .top-navbar {\A 21:     min-height: $topbar-height;"; }
