--- a/assets/css/widgets/topbar-mail.css
+++ b/assets/css/widgets/topbar-mail.css
@@ -5,14 +5,14 @@ Error: Undefined variable: "$font-weight-medium".
 12: /*User mail widgets*\/
 13: /*******************\/
 14: .mailbox {
-15:     
-16:         .drop-title {
-17:             font-weight: $font-weight-medium;
-18:             padding: 11px 20px 15px;
-19:             border-radius: $border-radius $border-radius 0 0;
-20:             position: relative;
-21:             &:after{
-22:                 content: "";
+15: 
+16:   .drop-title {
+17:     font-weight: $font-weight-medium;
+18:     padding: 11px 20px 15px;
+19:     border-radius: $border-radius $border-radius 0 0;
+20:     position: relative;
+21: 
+22:     &:after {
 
 Backtrace:
 scss/widgets/topbar-mail.scss:17
@@ -80,4 +80,4 @@ C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/interna
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$font-weight-medium\".\A         on line 17 of scss/widgets/topbar-mail.scss\A \A 12: /*User mail widgets*/\A 13: /*******************/\A 14: .mailbox {\A 15:     \A 16:         .drop-title {\A 17:             font-weight: $font-weight-medium;\A 18:             padding: 11px 20px 15px;\A 19:             border-radius: $border-radius $border-radius 0 0;\A 20:             position: relative;\A 21:             &:after{\A 22:                 content: \"\";"; }
+  content: "Error: Undefined variable: \"$font-weight-medium\".\A         on line 17 of scss/widgets/topbar-mail.scss\A \A 12: /*User mail widgets*/\A 13: /*******************/\A 14: .mailbox {\A 15: \A 16:   .drop-title {\A 17:     font-weight: $font-weight-medium;\A 18:     padding: 11px 20px 15px;\A 19:     border-radius: $border-radius $border-radius 0 0;\A 20:     position: relative;\A 21: \A 22:     &:after {"; }
