--- a/assets/scss/_bootstrap.scss
+++ b/assets/scss/_bootstrap.scss
@@ -634,54 +634,36 @@ body {
 }
 
 .form-control {
-  display: block;
-  width: 100%;
-  height: calc(1.5em + 0.75rem + 2px);
-  padding: 0.375rem 0.75rem;
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.5;
   color: #4F5467;
   background-color: #fff;
-  background-clip: padding-box;
   border: 1px solid #e9ecef;
   border-radius: 2px;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-
-@media (prefers-reduced-motion: reduce) {
-  .form-control {
-    transition: none;
+  &:-moz-focusring {
+    color: transparent;
+    text-shadow: 0 0 0 #4F5467;
   }
+  &:focus {
+    color: #4F5467;
+    background-color: #fff;
+    border-color: rgba(0, 0, 0, 0.25);
+    outline: 0;
+    box-shadow: transparent;
+  }
+  &::placeholder {
+    color: #6c757d;
+    opacity: 1;
+  }
+  &:disabled,
+  &[readonly]{
+    background-color: #e9ecef;
+    opacity: 1;
+  }
+
 }
 
-.form-control::-ms-expand {
-  background-color: transparent;
-  border: 0;
-}
-
-.form-control:-moz-focusring {
-  color: transparent;
-  text-shadow: 0 0 0 #4F5467;
-}
-
-.form-control:focus {
-  color: #4F5467;
-  background-color: #fff;
-  border-color: rgba(0, 0, 0, 0.25);
-  outline: 0;
-  box-shadow: transparent;
-}
-
-.form-control::placeholder {
-  color: #6c757d;
-  opacity: 1;
-}
-
-.form-control:disabled, .form-control[readonly] {
-  background-color: #e9ecef;
-  opacity: 1;
-}
 
 input[type="date"].form-control,
 input[type="time"].form-control,
@@ -757,17 +739,6 @@ select.form-control:focus::-ms-value {
   border-radius: 2px;
 }
 
-select.form-control[size], select.form-control[multiple] {
-  height: auto;
-}
-
-textarea.form-control {
-  height: auto;
-}
-
-.form-group {
-  margin-bottom: 1rem;
-}
 
 .form-text {
   display: block;
