--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -141,8 +141,7 @@ $grid-gutter-width: 20px !default;
 //
 // Font, line-height, and color for body text, headings, and more.
 $font-size-base: 0.875rem;
-$font-family-sans-serif: 'Rubik',
-sans-serif !default;
+$font-family-sans-serif: 'Rubik', sans-serif !default;
 $font-weight-light: 300 !default;
 $font-weight-normal: 400 !default;
 $font-weight-medium: 500 !default;
@@ -220,3 +219,25 @@ $grid-breakpoints: (xs: 0,
 //Navbar
 $navbar-dark-color: rgba($white, .8) !default;
 $navbar-dark-hover-color: rgba($white, 1) !default;
+
+%scroll-style {
+  &::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+    background-color: transparent;
+    border-radius: 9px;
+    margin-right: 5px;
+    padding-right: 5px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: red;
+    border-radius: 9px;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+  }
+  &::-webkit-scrollbar-button:vertical:start:decrement,
+  &::-webkit-scrollbar-button:horizontal:start:decrement,
+  &::-webkit-scrollbar-button:horizontal:end:increment {
+    display: none;
+  }
+}
