--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,8 +1,3 @@
-/*
-Template Name: Admin Template
-Author: Niravjoshi / Wrappixel2
-File: scss
-*/
 
 @import url('https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900');
 //(Required file)
@@ -23,7 +18,7 @@ File: scss
 @import 'components';
 
 //This is for the pages (if you are not using some pages you can remove that style from pages folder)
-@import 'pages';
+//@import 'pages';
 
 //This is for the widgets (Required file)
 @import 'widgets/widgets';
