--- a/assets/scss/core/core.scss
+++ b/assets/scss/core/core.scss
@@ -1,6 +1,6 @@
 @import 'layout/layout'; 
 
-@import 'scafholdings/scafholding';
+//@import 'scafholdings/scafholding';
 // Header
 @import 'loader/spinner';  
 // Header
