--- a/assets/css/core/breadcrumb/breadcrumb.css
+++ b/assets/css/core/breadcrumb/breadcrumb.css
@@ -1,21 +1,21 @@
 /*
 Error: Undefined variable: "$font-weight-medium".
-        on line 9 of scss/core/breadcrumb/breadcrumb.scss
+        on line 10 of scss/core/breadcrumb/breadcrumb.scss
 
-4: 
 5: .page-breadcrumb {
-6:     padding: 20px 20px 0 20px;  
-7:     .page-title{
-8:         margin-bottom: 0px;
-9:         font-weight: $font-weight-medium;
-10:         font-size: 21px;
-11:         
-12:     }
-13:     .breadcrumb {
-14:         padding: 0px;
+6:   padding: 20px 20px 0 20px;
+7: 
+8:   .page-title {
+9:     margin-bottom: 0px;
+10:     font-weight: $font-weight-medium;
+11:     font-size: 21px;
+12: 
+13:   }
+14: 
+15:   .breadcrumb {
 
 Backtrace:
-scss/core/breadcrumb/breadcrumb.scss:9
+scss/core/breadcrumb/breadcrumb.scss:10
 C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/script/tree/variable.rb:49:in `_perform'
 C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/script/tree/node.rb:50:in `perform'
 C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/tree/visitors/perform.rb:398:in `visit_prop'
@@ -66,17 +66,18 @@ C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:46
 C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
 C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:209:in `each'
 C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:294:in `watch'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin.rb:109:in `method_missing'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/exec/sass_scss.rb:358:in `watch_or_update'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/exec/sass_scss.rb:51:in `process_result'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/exec/base.rb:50:in `parse'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/exec/base.rb:18:in `parse!'
-C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/bin/sass:13:in `<top (required)>'
-C:/Ruby24-x64/bin/sass:23:in `load'
-C:/Ruby24-x64/bin/sass:23:in `<main>'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:443:in `on_file_changed'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.7/lib/sass/plugin/compiler.rb:320:in `block in watch'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/config.rb:23:in `call'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:115:in `_process_changes'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:19:in `block in loop_for'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop_for'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:84:in `_wait_for_changes'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:42:in `block in setup'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-listen-4.0.0/lib/sass-listen/internals/thread_pool.rb:6:in `block in add'
 */
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$font-weight-medium\".\A         on line 9 of scss/core/breadcrumb/breadcrumb.scss\A \A 4: \A 5: .page-breadcrumb {\A 6:     padding: 20px 20px 0 20px;  \A 7:     .page-title{\A 8:         margin-bottom: 0px;\A 9:         font-weight: $font-weight-medium;\A 10:         font-size: 21px;\A 11:         \A 12:     }\A 13:     .breadcrumb {\A 14:         padding: 0px;"; }
+  content: "Error: Undefined variable: \"$font-weight-medium\".\A         on line 10 of scss/core/breadcrumb/breadcrumb.scss\A \A 5: .page-breadcrumb {\A 6:   padding: 20px 20px 0 20px;\A 7: \A 8:   .page-title {\A 9:     margin-bottom: 0px;\A 10:     font-weight: $font-weight-medium;\A 11:     font-size: 21px;\A 12: \A 13:   }\A 14: \A 15:   .breadcrumb {"; }
