--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2485,37 +2485,8 @@ input[type="button"].btn-block {
   border-bottom-left-radius: 0px;
 }
 
-.card-body {
-  flex: 1 1 auto;
-  min-height: 1px;
-  padding: 1.25rem;
-}
-
-.card-title {
-  margin-bottom: 0.75rem;
-}
-
-.card-subtitle {
-  margin-top: -0.375rem;
-  margin-bottom: 0;
-}
-
-.card-text:last-child {
-  margin-bottom: 0;
-}
-
-.card-link:hover {
-  text-decoration: none;
-}
-
-.card-link + .card-link {
-  margin-left: 1.25rem;
-}
-
 .card-header {
   padding: 0.75rem 1.25rem;
-  margin-bottom: 0;
-  background-color: rgba(0, 0, 0, 0.03);
   border-bottom: 0px solid transparent;
 }
 
@@ -2530,11 +2501,11 @@ input[type="button"].btn-block {
 .card-footer {
   padding: 0.75rem 1.25rem;
   background-color: rgba(0, 0, 0, 0.03);
-  border-top: 0px solid transparent;
+  border-top: solid transparent;
 }
 
 .card-footer:last-child {
-  border-radius: 0 0 0px 0px;
+  border-radius: 0 0 0 0;
 }
 
 .card-header-tabs {
@@ -2550,31 +2521,19 @@ input[type="button"].btn-block {
 }
 
 .card-img-overlay {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
   padding: 1.25rem;
 }
 
 .card-img,
-.card-img-top,
-.card-img-bottom {
-  flex-shrink: 0;
-  width: 100%;
-}
-
-.card-img,
 .card-img-top {
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
 .card-img,
 .card-img-bottom {
-  border-bottom-right-radius: 0px;
-  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
 .card-deck .card {
@@ -2583,16 +2542,12 @@ input[type="button"].btn-block {
 
 @media (min-width: 576px) {
   .card-deck {
-    display: flex;
-    flex-flow: row wrap;
     margin-right: -10px;
     margin-left: -10px;
   }
 
   .card-deck .card {
-    flex: 1 0 0%;
     margin-right: 10px;
-    margin-bottom: 0;
     margin-left: 10px;
   }
 }
@@ -2602,23 +2557,6 @@ input[type="button"].btn-block {
 
 .card-columns .card {
   margin-bottom: 0.75rem;
-}
-
-@media (min-width: 576px) {
-  .card-columns {
-    column-count: 3;
-    column-gap: 1.25rem;
-    orphans: 1;
-    widows: 1;
-  }
-
-  .card-columns .card {
-    display: inline-block;
-    width: 100%;
-  }
-}
-.accordion > .card {
-  overflow: hidden;
 }
 
 .accordion > .card:not(:last-of-type) {
@@ -2647,37 +2585,7 @@ input[type="button"].btn-block {
   border-radius: 2px;
 }
 
-.breadcrumb-item {
-  display: flex;
-}
-
-.breadcrumb-item + .breadcrumb-item {
-  padding-left: 0.5rem;
-}
-
-.breadcrumb-item + .breadcrumb-item::before {
-  display: inline-block;
-  padding-right: 0.5rem;
-  color: #6c757d;
-  content: "/";
-}
-
-.breadcrumb-item + .breadcrumb-item:hover::before {
-  text-decoration: underline;
-}
-
-.breadcrumb-item + .breadcrumb-item:hover::before {
-  text-decoration: none;
-}
-
-.breadcrumb-item.active {
-  color: #6c757d;
-}
-
 .pagination {
-  display: flex;
-  padding-left: 0;
-  list-style: none;
   border-radius: 2px;
 }
 
