--- a/assets/scss/theme-colors/theme-colors.scss
+++ b/assets/scss/theme-colors/theme-colors.scss
@@ -27,12 +27,22 @@
         background: $skin6;
 
         .navbar-brand {
-          .dark-logo {
-            display: inline;
-          }
+         // .dark-logo {
+         //   display: inline;
+         // }
 
-          .light-logo {
-            display: none;
+         // .light-logo {
+         //   display: none;
+         // }
+          &:after {
+            position: absolute;
+            content: '\f002';
+            width: 40px;
+            height: 50px;
+            left: 0;
+            top: 0;
+            font-size: 35px;
+            font-family: Pixelion;
           }
         }
 
