--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* Common UI */
 /* Slider */
 /* Spinner */
@@ -166,10 +165,10 @@
   display: none;
 }
 .ui-datepicker .ui-datepicker-prev:before {
-  content: "";
+  content: "\f005";
 }
 .ui-datepicker .ui-datepicker-next:before {
-  content: "";
+  content: "\f006";
 }
 .ui-datepicker table {
   margin: 0;
@@ -189,7 +188,7 @@
 }
 
 .ui-slider-horizontal .ui-slider-handle {
-  top: -6.5px;
+  top: -8.5px;
   margin-left: -0.6em;
 }
 
@@ -362,7 +361,7 @@
   position: absolute;
   right: 0;
   text-indent: 0;
-  content: "";
+  content: "\f029";
   font-family: Pixelion;
   font-size: 12px;
   color: #626d78;
@@ -1160,6 +1159,12 @@ a:hover,
   text-decoration: none;
 }
 
+.navbar-right {
+  top: 0;
+  height: 50px;
+  align-items: center;
+}
+
 .copy {
   position: relative;
 }
@@ -1168,7 +1173,7 @@ a:hover,
   top: -5px;
   right: -25px;
   position: absolute;
-  content: "";
+  content: "\f092";
   font-family: Pixelion;
   font-size: 14px;
   padding: 1px 3px;
@@ -1255,7 +1260,7 @@ a:hover,
   padding-left: 35px;
 }
 .btn.load:after {
-  content: "";
+  content: "\f158";
   font-family: Pixelion;
   position: absolute;
   left: 10px;
@@ -1606,7 +1611,7 @@ input.loading {
   background-position: center center;
   background-repeat: no-repeat;
   background-image: url(../images/ajax-loading.gif);
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   width: 50px;
   height: 50px;
   line-height: 50px;
@@ -2037,7 +2042,7 @@ h6,
 }
 .navbar-brand:after {
   position: absolute;
-  content: "";
+  content: "\f002";
   width: 40px;
   height: 50px;
   left: 0;
@@ -2133,12 +2138,12 @@ h6,
 }
 
 .show > .dropdown-toggle::after {
-  content: "";
+  content: "\f007";
 }
 
 .dropdown-toggle::after {
   font-family: Pixelion;
-  content: "";
+  content: "\f008";
   border: 0;
   vertical-align: 0;
   font-size: 10px;
@@ -2317,27 +2322,27 @@ a.desc:after,
 }
 
 a.asc:after {
-  content: "";
+  content: "\f007";
 }
 
 a.desc:after {
-  content: "";
+  content: "\f008";
 }
 
 .sort-numerical a.asc:after {
-  content: "";
+  content: "\f007";
 }
 
 .sort-numerical a.desc:after {
-  content: "";
+  content: "\f008";
 }
 
 .sort-ordinal a.asc:after {
-  content: "";
+  content: "\f007";
 }
 
 .sort-ordinal a.desc:after {
-  content: "";
+  content: "\f008";
 }
 
 #dialog_edit_columns {
@@ -2609,13 +2614,11 @@ a.desc:after {
   form .col-form-label {
     padding-top: calc(0.375rem + 1px);
   }
-
   .navbar-expand-lg .navbar-nav .nav-link,
 .navbar .navbar-right .nav-link {
     padding-top: 13px;
     padding-bottom: 13px;
   }
-
   .navbar-expand-lg .dropdown-menu .nav-link {
     padding: 5px 10px;
   }
@@ -2641,7 +2644,7 @@ a.desc:after {
 .navbar .navbar-right > li:last-child {
   margin-right: 0;
 }
-.navbar .navbar-right > li > a span {
+.navbar .navbar-right > li > a span.badge {
   position: absolute;
   top: 5px;
   right: 2px;
@@ -2691,7 +2694,7 @@ table .alert {
   padding-left: 100px;
 }
 #wrapper.active #menu-toggle span:before {
-  content: "";
+  content: "\f005";
   /*content: "\f142";*/
 }
 #wrapper #menu-toggle {
@@ -2711,7 +2714,7 @@ table .alert {
   font-style: normal;
   line-height: 1;
   /*content: "\f006";*/
-  content: "";
+  content: "\f142";
 }
 
 ::-webkit-scrollbar {
@@ -2775,10 +2778,10 @@ table .alert {
   font-size: 10px;
 }
 .sidebar-nav .sidebar-collapse[aria-expanded=false]:after {
-  content: "";
+  content: "\f008";
 }
 .sidebar-nav .sidebar-collapse[aria-expanded=true]:after {
-  content: "";
+  content: "\f007";
 }
 
 #wrapper.active #sidebar-wrapper,
@@ -2795,24 +2798,20 @@ h1,
   .module-header .btn span {
     display: inline;
   }
-
   .nav-tabs .nav-item {
     margin-bottom: -1px;
   }
-
   .common-ajax-loading {
     text-indent: 0;
     padding: 10px 15px 10px 50px;
     color: #fff;
     font-size: 14px;
   }
-
   .navbar-brand {
     width: 140px;
     padding-left: 40px;
     font-size: 19px;
   }
-
   .footer {
     text-align: center;
   }
@@ -2825,11 +2824,9 @@ h1,
   .nav-tabs > li {
     margin-bottom: -1px;
   }
-
   .navbar .navbar-right {
     right: 0;
   }
-
   .navbar-brand:after {
     left: 0;
   }
@@ -2874,14 +2871,12 @@ h1,
   .tab-content {
     position: relative;
   }
-
   .nav-tabs-vertical {
     float: left;
     width: 200px;
     position: relative;
     top: 0;
   }
-
   .tabs-pan-vertical {
     float: left;
     -webkit-transition: all 0.1s width;
@@ -2891,33 +2886,27 @@ h1,
     transition: all 0.1s width;
     border-left: 1px solid #cdcdcd;
   }
-
   .nav-tabs-vertical > li {
     float: none;
     margin-bottom: 0;
   }
-
   .nav-tabs-vertical > li > a {
     border-top: 1px solid #fff;
     border-bottom: 1px solid #cdcdcd;
     border-right: 0;
     border-left: 0;
   }
-
   .nav-tabs-vertical > li:last-child > a {
     border-bottom: 0;
   }
-
   .nav-tabs-vertical > li > a:hover {
     border-top: 1px solid #fff;
   }
-
   .nav-tabs-vertical > li.active:last-child > a,
 .nav-tabs-vertical > li.active:last-child > a:hover,
 .nav-tabs-vertical > li.active:last-child > a:focus {
     border-bottom: 0;
   }
-
   .nav-tabs-vertical > li.active:first-child > a,
 .nav-tabs-vertical > li.active:first-child > a:hover,
 .nav-tabs-vertical > li.active:first-child > a:focus {
@@ -2925,7 +2914,6 @@ h1,
     border-top: 1px solid #fff;
     border-bottom: 1px solid #cdcdcd;
   }
-
   .nav-tabs-vertical > li.active > a,
 .nav-tabs-vertical > li.active > a:hover,
 .nav-tabs-vertical > li.active > a:focus {
@@ -2938,7 +2926,6 @@ h1,
     /*box-shadow: 0 0 10px -4px rgba(0, 0, 0, 0.3) inset;*/
     box-shadow: 0 -10px 10px -12px rgba(0, 0, 0, 0.3) inset;
   }
-
   .nav-tabs-vertical > li.active2 > a:before {
     content: "";
     position: absolute;
@@ -2984,15 +2971,15 @@ h1,
 
 .alert-danger:before,
 .alert-warning:before {
-  content: "";
+  content: "\f053";
 }
 
 .alert-success:before {
-  content: "";
+  content: "\f055";
 }
 
 .alert-info:before {
-  content: "";
+  content: "\f054";
 }
 
 .open .grid-options {
