--- a/assets/scss/dashboard.scss
+++ b/assets/scss/dashboard.scss
@@ -1923,8 +1923,7 @@ h1,
   }
   .nav-item.show .nav-link,
   .nav-link.active {
-    padding: 9px 15px 10px 15px;
-    margin-bottom: -1px;
+    padding: 9px 15px;
     position: relative;
     z-index: 1;
   }
