--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -188,7 +188,7 @@
 }
 
 .ui-slider-horizontal .ui-slider-handle {
-  top: -8.5px;
+  top: -5px;
   margin-left: -0.6em;
 }
 
@@ -2854,8 +2854,7 @@ h1,
 }
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
-  padding: 9px 15px 10px 15px;
-  margin-bottom: -1px;
+  padding: 9px 15px;
   position: relative;
   z-index: 1;
 }
